--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   geocoding: ^2.1.1
   get: ^4.6.6
   google_maps_flutter: ^2.5.3
-
+  http: ^1.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
